<resources>
    <string name="app_name">Weather IO</string>
    <string name="SensorButton">Your Sensor</string>
    <string name="city">Toronto</string>
    <string name="sensorTemp">Current Temperature</string>
    <string name="sensorHumidity">Current Humidity</string>
    <string name="city2">City 2</string>
    <string name="city3">City 3</string>
    <string name="city4">City 4</string>
    <string name="Temp">20</string>
    <string name="Humidity">55 %</string>
    <string name="add_city">Add City</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="header_title">Weather I/O</string>
    <string name="Name">Your Name</string>
    <string name="Sensor_Serial_Number">Enter Your Sensor Serial Number</string>
    <string name="Serial_Num">Serial Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CityName">City Name</string>


</resources>
