<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AddSensor">

<TextView
    android:id="@+id/Sensor_Serial_Number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="70dp"
    android:text="@string/Sensor_Serial_Number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/Name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="169dp"
    android:text="@string/Name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/Serial_Num"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="15dp"
    android:ems="10"
    android:inputType="number"
    android:hint="@string/Serial_Num"
    app:layout_constraintBottom_toTopOf="@+id/Name"
    app:layout_constraintStart_toStartOf="parent" />

<EditText
    android:id="@+id/Your_Name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="37dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/Name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Name" />
</android.support.constraint.ConstraintLayout>